[package]
name = "client-cookie-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
josekit = "0.8.3"
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0.70"
sha2 = "0.10.6"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.70"
